--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="google-site-verification" content="eCTcxOiZUPkmsdhySeRGQNof31o5q-JtxvTZS0Smiio" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <title>SVCHS Alumni - Reconnect, Relive, Empower</title>
@@ -11,6 +12,7 @@
   <meta name="keywords" content="SVCHS, alumni, Swami Vivekananda, Yenigadale, alumni network, school reunion, education">
   <meta name="author" content="SVCHS Alumni Association">
   <meta name="robots" content="index, follow">
+  
 
   <!-- Canonical URL -->
   <link rel="canonical" href="https://svchsalumniconnects.lovable.app/" />
