--- a/index.html
+++ b/index.html
@@ -1,44 +1,29 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="google-site-verification" content="eCTcxOiZUPkmsdhySeRGQNof31o5q-JtxvTZS0Smiio" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SVCHS Alumni - Reconnect, Relive, Empower</title>
+    <meta name="description" content="Join the SVCHS Alumni community. Connect with classmates, support student programs, and celebrate our shared heritage from Swami Vivekananda Composite High School.">
+    <meta name="author" content="SVCHS Alumni Association" />
+    <meta name="keywords" content="SVCHS, alumni, Swami Vivekananda, Yenigadale, school reunion, alumni network, donations, education">
 
-  <title>SVCHS Alumni - Reconnect, Relive, Empower</title>
+    
+    
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://storage.googleapis.com/gpt-engineer-file-uploads/xAemdDAAJbZYdlTu0pwh2MO1ano2/social-images/social-1763307665567-Screenshot 2025-11-16 201420.png">
 
-  <!-- SEO Meta Tags -->
-  <meta name="description" content="Join the SVCHS Alumni community. Connect with classmates, support student programs, and celebrate our shared heritage from Swami Vivekananda Composite High School.">
-  <meta name="keywords" content="SVCHS, alumni, Swami Vivekananda, Yenigadale, alumni network, school reunion, education">
-  <meta name="author" content="SVCHS Alumni Association">
-  <meta name="robots" content="index, follow">
-  
-
-  <!-- Canonical URL -->
-  <link rel="canonical" href="https://svchsalumniconnects.lovable.app/" />
-
-  <!-- Open Graph (Facebook / WhatsApp) -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="SVCHS Alumni - Reconnect, Relive, Empower">
-  <meta property="og:description" content="Join the SVCHS Alumni community. Connect with classmates, support student programs, and celebrate our shared heritage from Swami Vivekananda Composite High School.">
-  <meta property="og:url" content="https://svchsalumniconnects.lovable.app/">
-  <meta property="og:image" content="https://storage.googleapis.com/gpt-engineer-file-uploads/xAemdDAAJbZYdlTu0pwh2MO1ano2/social-images/social-1763307665567-Screenshot%202025-11-16%20201420.png">
-
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@Lovable" />
+    <meta name="twitter:image" content="https://storage.googleapis.com/gpt-engineer-file-uploads/xAemdDAAJbZYdlTu0pwh2MO1ano2/social-images/social-1763307665567-Screenshot 2025-11-16 201420.png">
+    <meta property="og:title" content="SVCHS Alumni - Reconnect, Relive, Empower">
   <meta name="twitter:title" content="SVCHS Alumni - Reconnect, Relive, Empower">
-  <meta name="twitter:description" content="Join the SVCHS Alumni community. Connect with classmates, support student programs, and celebrate our shared heritage.">
-  <meta name="twitter:image" content="https://storage.googleapis.com/gpt-engineer-file-uploads/xAemdDAAJbZYdlTu0pwh2MO1ano2/social-images/social-1763307665567-Screenshot%202025-11-16%20201420.png">
-
-  <!-- Favicon -->
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
-
+  <meta property="og:description" content="Join the SVCHS Alumni community. Connect with classmates, support student programs, and celebrate our shared heritage from Swami Vivekananda Composite High School.">
+  <meta name="twitter:description" content="Join the SVCHS Alumni community. Connect with classmates, support student programs, and celebrate our shared heritage from Swami Vivekananda Composite High School.">
 </head>
 
-<body>
-  <div id="root"></div>
-
-  <!-- React / App Entry -->
-  <script type="module" src="/src/main.tsx"></script>
-</body>
-</html>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html> this is my html
